# Software-Projects-Collection

Boost_Searcher/: CMakeLists.txt  LINUX_README.md  Makefile  README.md  WINDOWS_CHANGES.md  WINDOWS_README.md  build_linux.sh  build_windows.bat  check_structure.bat  cpp-httplib  debug  debug.cpp  http_server  http_server.cpp  index.hpp  install_dependencies.bat  install_linux.sh  parser  parser.cpp  searcher.hpp  start_linux.sh  test_jieba  test_jieba.cpp  util.hpp  思维导图.html
Boost_Searcher/data/input/: xas.html
Boost_Searcher/test/: demo.cpp  test.cpp
Boost_Searcher/wwwroot/: index.html
ConcurrentMemoryPool/: Benchmark.cpp  README.md  思维导图.html
ConcurrentMemoryPool/Debug/: ConcurrentMemoryPool.exe.recipe  vc143.idb
ConcurrentMemoryPool/Debug/Concurre.4629ED6F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConcurrentMemoryPool.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
concurrent-memory-pool/: Benchmark.cpp  UnitTest.cpp
